modificacion notebooks modelos para correr el colab

--- a/src/v1/train_cascade_rcnn_colab.ipynb
+++ b/src/v1/train_cascade_rcnn_colab.ipynb
@@ -173,23 +173,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Función para cargar datos desde Google Drive o subir archivos\n",
+    "# ============================================================\n",
+    "# CONFIGURACIÓN DE RUTAS PRINCIPALES (Adaptado para pipelines)\n",
+    "# ============================================================\n",
+    "\n",
+    "# Definir la ruta base principal (ajustar según el entorno: Drive o local)\n",
+    "BASE_DIR = Path(\"/content/drive/MyDrive/aerial-wildlife-count\")\n",
+    "\n",
+    "# ============================================================\n",
+    "# RUTAS DE DATOS PROCESADOS (Outputs de pipelines)\n",
+    "# ============================================================\n",
+    "\n",
+    "# Rutas de los archivos de anotaciones finales (después de quality + augmentation)\n",
+    "TRAIN_ANN_FILE = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"train_final\" / \"train_final.json\"\n",
+    "VAL_ANN_FILE = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"val_final\" / \"val_final.json\"\n",
+    "TEST_ANN_FILE = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"test_final\" / \"test_final.json\"\n",
+    "\n",
+    "# Rutas alternativas si no existe la estructura final\n",
+    "TRAIN_ANN_FILE_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"train_validated.json\"\n",
+    "VAL_ANN_FILE_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"val_validated.json\"\n",
+    "TEST_ANN_FILE_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"test_validated.json\"\n",
+    "\n",
+    "# Rutas de las carpetas de imágenes correspondientes\n",
+    "TRAIN_IMG_DIR = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"train_final\" / \"images\"\n",
+    "VAL_IMG_DIR = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"val_final\" / \"images\"\n",
+    "TEST_IMG_DIR = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"test_final\" / \"images\"\n",
+    "\n",
+    "# Rutas alternativas para imágenes\n",
+    "TRAIN_IMG_DIR_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"train\" / \"images\"\n",
+    "VAL_IMG_DIR_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"val\" / \"images\"\n",
+    "TEST_IMG_DIR_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"test\" / \"images\"\n",
+    "\n",
+    "# ============================================================\n",
+    "# FUNCIÓN PARA CONFIGURAR DATOS (Adaptada para pipelines)\n",
+    "# ============================================================\n",
+    "\n",
     "def setup_data():\n",
-    "    \"\"\"Configurar datos desde Google Drive o archivos subidos\"\"\"\n",
+    "    \"\"\"Configurar datos desde Google Drive con detección automática de pipelines\"\"\"\n",
     "    \n",
-    "    # Opción 1: Montar Google Drive\n",
-    "    print(\"📁 Opciones para cargar datos:\")\n",
-    "    print(\"1. Montar Google Drive\")\n",
-    "    print(\"2. Subir archivos manualmente\")\n",
+    "    # Montar Google Drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    print(\"✅ Google Drive montado\")\n",
     "    \n",
-    "    choice = input(\"Selecciona opción (1 o 2): \").strip()\n",
-    "    \n",
-    "    if choice == \"1\":\n",
-    "        # Montar Google Drive\n",
-    "        drive.mount('/content/drive')\n",
-    "        print(\"✅ Google Drive montado\")\n",
-    "        \n",
-    "        # Buscar el dataset en Drive\n",
+    "    # Verificar si existe la estructura de pipelines\n",
+    "    if TRAIN_ANN_FILE.exists() and TRAIN_IMG_DIR.exists():\n",
+    "        print(\"✅ Datos de pipelines encontrados (estructura final)\")\n",
+    "        cfg.data_root = str(BASE_DIR)\n",
+    "        return True, \"final\"\n",
+    "    elif TRAIN_ANN_FILE_ALT.exists() and TRAIN_IMG_DIR_ALT.exists():\n",
+    "        print(\"✅ Datos de pipelines encontrados (estructura verificada)\")\n",
+    "        cfg.data_root = str(BASE_DIR)\n",
+    "        return True, \"verified\"\n",
+    "    else:\n",
+    "        # Buscar en ubicaciones alternativas\n",
     "        drive_path = \"/content/drive/MyDrive\"\n",
     "        possible_paths = [\n",
     "            f\"{drive_path}/aerial-wildlife-count\",\n",
@@ -200,24 +236,18 @@
     "        for path in possible_paths:\n",
     "            if os.path.exists(path):\n",
     "                cfg.data_root = path\n",
-    "                print(f\"✅ Dataset encontrado en: {path}\")\n",
-    "                return True\n",
+    "                print(f\"✅ Dataset encontrado en ubicación alternativa: {path}\")\n",
+    "                return True, \"legacy\"\n",
     "        \n",
     "        print(\"❌ No se encontró el dataset en Google Drive\")\n",
-    "        return False\n",
-    "    \n",
-    "    elif choice == \"2\":\n",
-    "        print(\"📤 Sube los archivos del dataset...\")\n",
-    "        uploaded = files.upload()\n",
-    "        print(\"✅ Archivos subidos\")\n",
-    "        return True\n",
-    "    \n",
-    "    else:\n",
-    "        print(\"❌ Opción inválida\")\n",
-    "        return False\n",
+    "        return False, None\n",
     "\n",
     "# Configurar datos\n",
-    "if not setup_data():\n",
+    "success, data_type = setup_data()\n",
+    "if success:\n",
+    "    print(f\"📁 Ruta de datos configurada: {cfg.data_root}\")\n",
+    "    print(f\"📊 Tipo de datos: {data_type}\")\n",
+    "else:\n",
     "    print(\"⚠️  Configura los datos manualmente antes de continuar\")\n"
    ]
   },
@@ -227,30 +257,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Función para encontrar y validar datasets\n",
+    "# Función para encontrar y validar datasets (Adaptada para pipelines)\n",
     "def find_datasets():\n",
-    "    \"\"\"Encontrar datasets disponibles en el directorio\"\"\"\n",
+    "    \"\"\"Encontrar datasets disponibles según el tipo de datos\"\"\"\n",
     "    \n",
-    "    data_root = Path(cfg.data_root)\n",
     "    datasets_found = []\n",
     "    \n",
-    "    # Buscar archivos JSON de anotaciones\n",
-    "    json_patterns = [\n",
-    "        \"**/train_*.json\",\n",
-    "        \"**/val_*.json\", \n",
-    "        \"**/test_*.json\",\n",
-    "        \"**/*_big_size_*.json\",\n",
-    "        \"**/*_subframes_*.json\"\n",
-    "    ]\n",
-    "    \n",
-    "    for pattern in json_patterns:\n",
-    "        for json_file in data_root.glob(pattern):\n",
-    "            if json_file.is_file():\n",
-    "                datasets_found.append(json_file)\n",
-    "    \n",
-    "    print(f\"📊 Datasets encontrados ({len(datasets_found)}):\")\n",
-    "    for i, dataset in enumerate(datasets_found):\n",
-    "        print(f\"  {i+1}. {dataset}\")\n",
+    "    if data_type == \"final\":\n",
+    "        # Estructura final de pipelines (augmentation + quality)\n",
+    "        datasets_found = [TRAIN_ANN_FILE, VAL_ANN_FILE, TEST_ANN_FILE]\n",
+    "        print(\"📊 Usando datasets finales de pipelines:\")\n",
+    "        print(f\"  Train: {TRAIN_ANN_FILE}\")\n",
+    "        print(f\"  Val: {VAL_ANN_FILE}\")\n",
+    "        print(f\"  Test: {TEST_ANN_FILE}\")\n",
+    "        \n",
+    "    elif data_type == \"verified\":\n",
+    "        # Estructura verificada de quality pipeline\n",
+    "        datasets_found = [TRAIN_ANN_FILE_ALT, VAL_ANN_FILE_ALT, TEST_ANN_FILE_ALT]\n",
+    "        print(\"📊 Usando datasets verificados de quality pipeline:\")\n",
+    "        print(f\"  Train: {TRAIN_ANN_FILE_ALT}\")\n",
+    "        print(f\"  Val: {VAL_ANN_FILE_ALT}\")\n",
+    "        print(f\"  Test: {TEST_ANN_FILE_ALT}\")\n",
+    "        \n",
+    "    else:\n",
+    "        # Estructura legacy - buscar archivos JSON\n",
+    "        data_root = Path(cfg.data_root)\n",
+    "        json_patterns = [\n",
+    "            \"**/train_*.json\",\n",
+    "            \"**/val_*.json\", \n",
+    "            \"**/test_*.json\",\n",
+    "            \"**/*_big_size_*.json\",\n",
+    "            \"**/*_subframes_*.json\",\n",
+    "            \"**/*_final.json\",\n",
+    "            \"**/*_validated.json\"\n",
+    "        ]\n",
+    "        \n",
+    "        for pattern in json_patterns:\n",
+    "            for json_file in data_root.glob(pattern):\n",
+    "                if json_file.is_file():\n",
+    "                    datasets_found.append(json_file)\n",
+    "        \n",
+    "        print(f\"📊 Datasets encontrados en estructura legacy ({len(datasets_found)}):\")\n",
+    "        for i, dataset in enumerate(datasets_found):\n",
+    "            print(f\"  {i+1}. {dataset}\")\n",
     "    \n",
     "    return datasets_found\n",
     "\n",
@@ -324,10 +373,20 @@
     "        ]\n",
     "        pretrained = \"https://download.openmmlab.com/mmdetection/v2.0/cascade_rcnn/cascade_rcnn_x101_32x4d_fpn_1x_coco/cascade_rcnn_x101_32x4d_fpn_1x_coco_20200315-f6f0ac5e.pth\"\n",
     "    \n",
-    "    # Determinar directorios de imágenes\n",
-    "    train_img_dir = train_json.parent / \"images\" if (train_json.parent / \"images\").exists() else train_json.parent.parent / \"train\"\n",
-    "    val_img_dir = val_json.parent.parent / \"val\"\n",
-    "    test_img_dir = test_json.parent.parent / \"test\"\n",
+    "    # Determinar directorios de imágenes según el tipo de datos\n",
+    "    if data_type == \"final\":\n",
+    "        train_img_dir = TRAIN_IMG_DIR\n",
+    "        val_img_dir = VAL_IMG_DIR\n",
+    "        test_img_dir = TEST_IMG_DIR\n",
+    "    elif data_type == \"verified\":\n",
+    "        train_img_dir = TRAIN_IMG_DIR_ALT\n",
+    "        val_img_dir = VAL_IMG_DIR_ALT\n",
+    "        test_img_dir = TEST_IMG_DIR_ALT\n",
+    "    else:\n",
+    "        # Estructura legacy\n",
+    "        train_img_dir = train_json.parent / \"images\" if (train_json.parent / \"images\").exists() else train_json.parent.parent / \"train\"\n",
+    "        val_img_dir = val_json.parent.parent / \"val\"\n",
+    "        test_img_dir = test_json.parent.parent / \"test\"\n",
     "    \n",
     "    config = {\n",
     "        \"_base_\": base_configs,\n",
@@ -473,28 +532,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preparar datos para entrenamiento\n",
+    "# Preparar datos para entrenamiento (Adaptada para pipelines)\n",
     "def prepare_training_data():\n",
-    "    \"\"\"Preparar y validar datos para entrenamiento\"\"\"\n",
+    "    \"\"\"Preparar y validar datos para entrenamiento según el tipo de datos\"\"\"\n",
     "    \n",
-    "    # Buscar archivos de datos\n",
-    "    train_files = [d for d in datasets if 'train' in d.name.lower()]\n",
-    "    val_files = [d for d in datasets if 'val' in d.name.lower()]\n",
-    "    test_files = [d for d in datasets if 'test' in d.name.lower()]\n",
-    "    \n",
-    "    print(\"📊 Archivos de datos encontrados:\")\n",
-    "    print(f\"  Train: {len(train_files)} archivos\")\n",
-    "    print(f\"  Val: {len(val_files)} archivos\") \n",
-    "    print(f\"  Test: {len(test_files)} archivos\")\n",
-    "    \n",
-    "    # Seleccionar archivos (usar los primeros encontrados)\n",
-    "    train_json = train_files[0] if train_files else None\n",
-    "    val_json = val_files[0] if val_files else None\n",
-    "    test_json = test_files[0] if test_files else None\n",
-    "    \n",
-    "    if not all([train_json, val_json, test_json]):\n",
-    "        print(\"❌ Faltan archivos de datos. Necesitas train, val y test JSON files.\")\n",
-    "        return None, None, None\n",
+    "    if data_type == \"final\":\n",
+    "        # Usar rutas finales de pipelines\n",
+    "        train_json = TRAIN_ANN_FILE\n",
+    "        val_json = VAL_ANN_FILE\n",
+    "        test_json = TEST_ANN_FILE\n",
+    "        \n",
+    "        # Verificar que existan\n",
+    "        if not all([train_json.exists(), val_json.exists(), test_json.exists()]):\n",
+    "            print(\"❌ Faltan archivos de datos finales de pipelines\")\n",
+    "            return None, None, None\n",
+    "            \n",
+    "    elif data_type == \"verified\":\n",
+    "        # Usar rutas verificadas de quality pipeline\n",
+    "        train_json = TRAIN_ANN_FILE_ALT\n",
+    "        val_json = VAL_ANN_FILE_ALT\n",
+    "        test_json = TEST_ANN_FILE_ALT\n",
+    "        \n",
+    "        # Verificar que existan\n",
+    "        if not all([train_json.exists(), val_json.exists(), test_json.exists()]):\n",
+    "            print(\"❌ Faltan archivos de datos verificados de quality pipeline\")\n",
+    "            return None, None, None\n",
+    "            \n",
+    "    else:\n",
+    "        # Estructura legacy - buscar en datasets encontrados\n",
+    "        train_files = [d for d in datasets if 'train' in d.name.lower()]\n",
+    "        val_files = [d for d in datasets if 'val' in d.name.lower()]\n",
+    "        test_files = [d for d in datasets if 'test' in d.name.lower()]\n",
+    "        \n",
+    "        print(\"📊 Archivos de datos encontrados:\")\n",
+    "        print(f\"  Train: {len(train_files)} archivos\")\n",
+    "        print(f\"  Val: {len(val_files)} archivos\") \n",
+    "        print(f\"  Test: {len(test_files)} archivos\")\n",
+    "        \n",
+    "        # Seleccionar archivos (usar los primeros encontrados)\n",
+    "        train_json = train_files[0] if train_files else None\n",
+    "        val_json = val_files[0] if val_files else None\n",
+    "        test_json = test_files[0] if test_files else None\n",
+    "        \n",
+    "        if not all([train_json, val_json, test_json]):\n",
+    "            print(\"❌ Faltan archivos de datos. Necesitas train, val y test JSON files.\")\n",
+    "            return None, None, None\n",
     "    \n",
     "    print(f\"\\n✅ Archivos seleccionados:\")\n",
     "    print(f\"  Train: {train_json}\")\n",
