--- a/src/v1/train_yolov8_colab.ipynb
+++ b/src/v1/train_yolov8_colab.ipynb
@@ -121,23 +121,57 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función para cargar datos desde Google Drive o subir archivos\n",
+        "# ============================================================\n",
+        "# CONFIGURACIÓN DE RUTAS PRINCIPALES (Adaptado para pipelines)\n",
+        "# ============================================================\n",
+        "\n",
+        "# Definir la ruta base principal (ajustar según el entorno: Drive o local)\n",
+        "BASE_DIR = Path(\"/content/drive/MyDrive/aerial-wildlife-count\")\n",
+        "\n",
+        "# ============================================================\n",
+        "# RUTAS DE DATOS PROCESADOS (Outputs de pipelines)\n",
+        "# ============================================================\n",
+        "\n",
+        "# Rutas de los archivos de anotaciones finales (después de quality + augmentation)\n",
+        "TRAIN_ANN_FILE = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"train_final\" / \"train_final.json\"\n",
+        "VAL_ANN_FILE = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"val_final\" / \"val_final.json\"\n",
+        "TEST_ANN_FILE = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"test_final\" / \"test_final.json\"\n",
+        "\n",
+        "# Rutas alternativas si no existe la estructura final\n",
+        "TRAIN_ANN_FILE_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"train_validated.json\"\n",
+        "VAL_ANN_FILE_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"val_validated.json\"\n",
+        "TEST_ANN_FILE_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"test_validated.json\"\n",
+        "\n",
+        "# Rutas de las carpetas de imágenes correspondientes\n",
+        "TRAIN_IMG_DIR = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"train_final\" / \"images\"\n",
+        "VAL_IMG_DIR = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"val_final\" / \"images\"\n",
+        "TEST_IMG_DIR = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"test_final\" / \"images\"\n",
+        "\n",
+        "# Rutas alternativas para imágenes\n",
+        "TRAIN_IMG_DIR_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"train\" / \"images\"\n",
+        "VAL_IMG_DIR_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"val\" / \"images\"\n",
+        "TEST_IMG_DIR_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"test\" / \"images\"\n",
+        "\n",
+        "# ============================================================\n",
+        "# FUNCIÓN PARA CONFIGURAR DATOS (Adaptada para pipelines)\n",
+        "# ============================================================\n",
+        "\n",
         "def setup_data():\n",
-        "    \"\"\"Configurar datos desde Google Drive o archivos subidos\"\"\"\n",
+        "    \"\"\"Configurar datos desde Google Drive con detección automática de pipelines\"\"\"\n",
         "    \n",
-        "    # Opción 1: Montar Google Drive\n",
-        "    print(\"📁 Opciones para cargar datos:\")\n",
-        "    print(\"1. Montar Google Drive\")\n",
-        "    print(\"2. Subir archivos manualmente\")\n",
+        "    # Montar Google Drive\n",
+        "    drive.mount('/content/drive')\n",
+        "    print(\"✅ Google Drive montado\")\n",
         "    \n",
-        "    choice = input(\"Selecciona opción (1 o 2): \").strip()\n",
-        "    \n",
-        "    if choice == \"1\":\n",
-        "        # Montar Google Drive\n",
-        "        drive.mount('/content/drive')\n",
-        "        print(\"✅ Google Drive montado\")\n",
-        "        \n",
-        "        # Buscar el dataset en Drive\n",
+        "    # Verificar si existe la estructura de pipelines\n",
+        "    if TRAIN_ANN_FILE.exists() and TRAIN_IMG_DIR.exists():\n",
+        "        print(\"✅ Datos de pipelines encontrados (estructura final)\")\n",
+        "        return str(BASE_DIR), \"final\"\n",
+        "    elif TRAIN_ANN_FILE_ALT.exists() and TRAIN_IMG_DIR_ALT.exists():\n",
+        "        print(\"✅ Datos de pipelines encontrados (estructura verificada)\")\n",
+        "        return str(BASE_DIR), \"verified\"\n",
+        "    else:\n",
+        "        # Buscar en ubicaciones alternativas\n",
         "        drive_path = \"/content/drive/MyDrive\"\n",
         "        possible_paths = [\n",
         "            f\"{drive_path}/aerial-wildlife-count\",\n",
@@ -147,26 +181,17 @@
         "        \n",
         "        for path in possible_paths:\n",
         "            if os.path.exists(path):\n",
-        "                print(f\"✅ Dataset encontrado en: {path}\")\n",
-        "                return path\n",
+        "                print(f\"✅ Dataset encontrado en ubicación alternativa: {path}\")\n",
+        "                return path, \"legacy\"\n",
         "        \n",
         "        print(\"❌ No se encontró el dataset en Google Drive\")\n",
-        "        return None\n",
-        "    \n",
-        "    elif choice == \"2\":\n",
-        "        print(\"📤 Sube los archivos del dataset...\")\n",
-        "        uploaded = files.upload()\n",
-        "        print(\"✅ Archivos subidos\")\n",
-        "        return \"/content\"\n",
-        "    \n",
-        "    else:\n",
-        "        print(\"❌ Opción inválida\")\n",
-        "        return None\n",
+        "        return None, None\n",
         "\n",
         "# Configurar datos\n",
-        "data_path = setup_data()\n",
+        "data_path, data_type = setup_data()\n",
         "if data_path:\n",
         "    print(f\"📁 Ruta de datos configurada: {data_path}\")\n",
+        "    print(f\"📊 Tipo de datos: {data_type}\")\n",
         "else:\n",
         "    print(\"⚠️  Configura los datos manualmente antes de continuar\")"
       ]
@@ -184,34 +209,53 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función para encontrar y analizar datasets\n",
+        "# Función para encontrar y analizar datasets (Adaptada para pipelines)\n",
         "def find_and_analyze_datasets():\n",
-        "    \"\"\"Encontrar y analizar datasets disponibles\"\"\"\n",
+        "    \"\"\"Encontrar y analizar datasets disponibles según el tipo de datos\"\"\"\n",
         "    \n",
         "    if not data_path:\n",
         "        print(\"❌ No hay ruta de datos configurada\")\n",
         "        return []\n",
         "    \n",
-        "    data_root = Path(data_path)\n",
         "    datasets_found = []\n",
         "    \n",
-        "    # Buscar archivos JSON de anotaciones\n",
-        "    json_patterns = [\n",
-        "        \"**/train_*.json\",\n",
-        "        \"**/val_*.json\", \n",
-        "        \"**/test_*.json\",\n",
-        "        \"**/*_big_size_*.json\",\n",
-        "        \"**/*_subframes_*.json\"\n",
-        "    ]\n",
-        "    \n",
-        "    for pattern in json_patterns:\n",
-        "        for json_file in data_root.glob(pattern):\n",
-        "            if json_file.is_file():\n",
-        "                datasets_found.append(json_file)\n",
-        "    \n",
-        "    print(f\"📊 Datasets encontrados ({len(datasets_found)}):\")\n",
-        "    for i, dataset in enumerate(datasets_found):\n",
-        "        print(f\"  {i+1}. {dataset}\")\n",
+        "    if data_type == \"final\":\n",
+        "        # Estructura final de pipelines (augmentation + quality)\n",
+        "        datasets_found = [TRAIN_ANN_FILE, VAL_ANN_FILE, TEST_ANN_FILE]\n",
+        "        print(\"📊 Usando datasets finales de pipelines:\")\n",
+        "        print(f\"  Train: {TRAIN_ANN_FILE}\")\n",
+        "        print(f\"  Val: {VAL_ANN_FILE}\")\n",
+        "        print(f\"  Test: {TEST_ANN_FILE}\")\n",
+        "        \n",
+        "    elif data_type == \"verified\":\n",
+        "        # Estructura verificada de quality pipeline\n",
+        "        datasets_found = [TRAIN_ANN_FILE_ALT, VAL_ANN_FILE_ALT, TEST_ANN_FILE_ALT]\n",
+        "        print(\"📊 Usando datasets verificados de quality pipeline:\")\n",
+        "        print(f\"  Train: {TRAIN_ANN_FILE_ALT}\")\n",
+        "        print(f\"  Val: {VAL_ANN_FILE_ALT}\")\n",
+        "        print(f\"  Test: {TEST_ANN_FILE_ALT}\")\n",
+        "        \n",
+        "    else:\n",
+        "        # Estructura legacy - buscar archivos JSON\n",
+        "        data_root = Path(data_path)\n",
+        "        json_patterns = [\n",
+        "            \"**/train_*.json\",\n",
+        "            \"**/val_*.json\", \n",
+        "            \"**/test_*.json\",\n",
+        "            \"**/*_big_size_*.json\",\n",
+        "            \"**/*_subframes_*.json\",\n",
+        "            \"**/*_final.json\",\n",
+        "            \"**/*_validated.json\"\n",
+        "        ]\n",
+        "        \n",
+        "        for pattern in json_patterns:\n",
+        "            for json_file in data_root.glob(pattern):\n",
+        "                if json_file.is_file():\n",
+        "                    datasets_found.append(json_file)\n",
+        "        \n",
+        "        print(f\"📊 Datasets encontrados en estructura legacy ({len(datasets_found)}):\")\n",
+        "        for i, dataset in enumerate(datasets_found):\n",
+        "            print(f\"  {i+1}. {dataset}\")\n",
         "    \n",
         "    # Analizar el primer dataset encontrado\n",
         "    if datasets_found:\n",
@@ -366,31 +410,55 @@
         "    print(f\"✅ Convertido {len(img_id_to_info)} imágenes a formato YOLO\")\n",
         "    return output_dir\n",
         "\n",
-        "# Preparar datos para conversión\n",
+        "# Preparar datos para conversión (Adaptado para pipelines)\n",
         "def prepare_yolo_data():\n",
-        "    \"\"\"Preparar datos para entrenamiento YOLO\"\"\"\n",
+        "    \"\"\"Preparar datos para entrenamiento YOLO según el tipo de datos\"\"\"\n",
         "    \n",
-        "    if not datasets:\n",
-        "        print(\"❌ No hay datasets disponibles\")\n",
-        "        return None, None, None\n",
-        "    \n",
-        "    # Buscar archivos de datos\n",
-        "    train_files = [d for d in datasets if 'train' in d.name.lower()]\n",
-        "    val_files = [d for d in datasets if 'val' in d.name.lower()]\n",
-        "    test_files = [d for d in datasets if 'test' in d.name.lower()]\n",
-        "    \n",
-        "    train_json = train_files[0] if train_files else None\n",
-        "    val_json = val_files[0] if val_files else None\n",
-        "    test_json = test_files[0] if test_files else None\n",
-        "    \n",
-        "    if not all([train_json, val_json]):\n",
-        "        print(\"❌ Faltan archivos de datos. Necesitas al menos train y val JSON files.\")\n",
-        "        return None, None, None\n",
+        "    if data_type == \"final\":\n",
+        "        # Usar rutas finales de pipelines\n",
+        "        train_json = TRAIN_ANN_FILE\n",
+        "        val_json = VAL_ANN_FILE\n",
+        "        test_json = TEST_ANN_FILE\n",
+        "        \n",
+        "        # Verificar que existan\n",
+        "        if not all([train_json.exists(), val_json.exists()]):\n",
+        "            print(\"❌ Faltan archivos de datos finales de pipelines\")\n",
+        "            return None, None, None\n",
+        "            \n",
+        "    elif data_type == \"verified\":\n",
+        "        # Usar rutas verificadas de quality pipeline\n",
+        "        train_json = TRAIN_ANN_FILE_ALT\n",
+        "        val_json = VAL_ANN_FILE_ALT\n",
+        "        test_json = TEST_ANN_FILE_ALT\n",
+        "        \n",
+        "        # Verificar que existan\n",
+        "        if not all([train_json.exists(), val_json.exists()]):\n",
+        "            print(\"❌ Faltan archivos de datos verificados de quality pipeline\")\n",
+        "            return None, None, None\n",
+        "            \n",
+        "    else:\n",
+        "        # Estructura legacy - buscar en datasets encontrados\n",
+        "        if not datasets:\n",
+        "            print(\"❌ No hay datasets disponibles\")\n",
+        "            return None, None, None\n",
+        "        \n",
+        "        # Buscar archivos de datos\n",
+        "        train_files = [d for d in datasets if 'train' in d.name.lower()]\n",
+        "        val_files = [d for d in datasets if 'val' in d.name.lower()]\n",
+        "        test_files = [d for d in datasets if 'test' in d.name.lower()]\n",
+        "        \n",
+        "        train_json = train_files[0] if train_files else None\n",
+        "        val_json = val_files[0] if val_files else None\n",
+        "        test_json = test_files[0] if test_files else None\n",
+        "        \n",
+        "        if not all([train_json, val_json]):\n",
+        "            print(\"❌ Faltan archivos de datos. Necesitas al menos train y val JSON files.\")\n",
+        "            return None, None, None\n",
         "    \n",
         "    print(f\"✅ Archivos seleccionados:\")\n",
         "    print(f\"  Train: {train_json}\")\n",
         "    print(f\"  Val: {val_json}\")\n",
-        "    if test_json:\n",
+        "    if test_json and test_json.exists():\n",
         "        print(f\"  Test: {test_json}\")\n",
         "    \n",
         "    return train_json, val_json, test_json\n",
@@ -410,12 +478,23 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Convertir datos si están disponibles\n",
+        "# Convertir datos si están disponibles (Adaptado para pipelines)\n",
         "if train_json and val_json:\n",
         "    \n",
-        "    # Determinar directorios de imágenes\n",
-        "    train_img_dir = train_json.parent / \"images\" if (train_json.parent / \"images\").exists() else train_json.parent.parent / \"train\"\n",
-        "    val_img_dir = val_json.parent.parent / \"val\"\n",
+        "    # Determinar directorios de imágenes según el tipo de datos\n",
+        "    if data_type == \"final\":\n",
+        "        train_img_dir = TRAIN_IMG_DIR\n",
+        "        val_img_dir = VAL_IMG_DIR\n",
+        "        test_img_dir = TEST_IMG_DIR\n",
+        "    elif data_type == \"verified\":\n",
+        "        train_img_dir = TRAIN_IMG_DIR_ALT\n",
+        "        val_img_dir = VAL_IMG_DIR_ALT\n",
+        "        test_img_dir = TEST_IMG_DIR_ALT\n",
+        "    else:\n",
+        "        # Estructura legacy\n",
+        "        train_img_dir = train_json.parent / \"images\" if (train_json.parent / \"images\").exists() else train_json.parent.parent / \"train\"\n",
+        "        val_img_dir = val_json.parent.parent / \"val\"\n",
+        "        test_img_dir = None\n",
         "    \n",
         "    # Convertir datos de entrenamiento\n",
         "    print(\"🔄 Convirtiendo datos de entrenamiento...\")\n",
@@ -455,12 +534,24 @@
         "            if os.path.exists(src):\n",
         "                shutil.copy2(src, dst)\n",
         "    \n",
+        "    # Copiar imágenes de test si están disponibles\n",
+        "    if test_img_dir and test_img_dir.exists():\n",
+        "        print(\"📁 Copiando imágenes de test...\")\n",
+        "        os.makedirs('/content/yolo_data/test/images', exist_ok=True)\n",
+        "        for img_file in tqdm(os.listdir(test_img_dir)):\n",
+        "            if img_file.lower().endswith(('.jpg', '.jpeg', '.png')):\n",
+        "                src = os.path.join(test_img_dir, img_file)\n",
+        "                dst = os.path.join('/content/yolo_data/test/images', img_file)\n",
+        "                if os.path.exists(src):\n",
+        "                    shutil.copy2(src, dst)\n",
+        "    \n",
         "    # Crear archivo de configuración YOLO\n",
+        "    test_line = \"test: test/images\\n\" if test_img_dir and test_img_dir.exists() else \"\"\n",
         "    yolo_config_content = f\"\"\"# Dataset configuration for YOLOv8\n",
         "path: /content/yolo_data\n",
         "train: train/images\n",
         "val: val/images\n",
-        "\n",
+        "{test_line}\n",
         "# Classes\n",
         "nc: {len(yolo_config.classes)}\n",
         "names: {yolo_config.classes}\n",
@@ -472,6 +563,8 @@
         "    print(\"✅ Conversión completada\")\n",
         "    print(f\"📊 Imágenes de entrenamiento: {len(os.listdir('/content/yolo_data/train/images'))}\")\n",
         "    print(f\"📊 Imágenes de validación: {len(os.listdir('/content/yolo_data/val/images'))}\")\n",
+        "    if test_img_dir and test_img_dir.exists():\n",
+        "        print(f\"📊 Imágenes de test: {len(os.listdir('/content/yolo_data/test/images'))}\")\n",
         "    \n",
         "else:\n",
         "    print(\"❌ No se puede convertir sin datos válidos\")\n"
