fix notebook yolov8

--- a/src/v1/train_cascade_rcnn_colab.ipynb
+++ b/src/v1/train_cascade_rcnn_colab.ipynb
@@ -174,56 +174,60 @@
    "outputs": [],
    "source": [
     "# ============================================================\n",
-    "# CONFIGURACIÓN DE RUTAS PRINCIPALES (Adaptado para pipelines)\n",
+    "# CONFIGURACIÓN DE RUTAS PRINCIPALES (Unificado con HerdNet)\n",
     "# ============================================================\n",
     "\n",
     "# Definir la ruta base principal (ajustar según el entorno: Drive o local)\n",
     "BASE_DIR = Path(\"/content/drive/MyDrive/aerial-wildlife-count\")\n",
     "\n",
     "# ============================================================\n",
-    "# RUTAS DE DATOS PROCESADOS (Outputs de pipelines)\n",
+    "# RUTAS DE IMÁGENES Y ANOTACIONES (COCO JSON) - Igual que HerdNet\n",
     "# ============================================================\n",
     "\n",
-    "# Rutas de los archivos de anotaciones finales (después de quality + augmentation)\n",
-    "TRAIN_ANN_FILE = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"train_final\" / \"train_final.json\"\n",
-    "VAL_ANN_FILE = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"val_final\" / \"val_final.json\"\n",
-    "TEST_ANN_FILE = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"test_final\" / \"test_final.json\"\n",
+    "# Rutas de los archivos de anotaciones en formato COCO\n",
+    "TRAIN_ANN_FILE = BASE_DIR / \"data\" / \"coco\" / \"train\" / \"train_annotations.json\"\n",
+    "VAL_ANN_FILE = BASE_DIR / \"data\" / \"coco\" / \"val\" / \"val_annotations.json\"\n",
+    "TEST_ANN_FILE = BASE_DIR / \"data\" / \"coco\" / \"test\" / \"test_annotations.json\"\n",
     "\n",
-    "# Rutas alternativas si no existe la estructura final\n",
-    "TRAIN_ANN_FILE_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"train_validated.json\"\n",
-    "VAL_ANN_FILE_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"val_validated.json\"\n",
-    "TEST_ANN_FILE_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"test_validated.json\"\n",
+    "# Rutas de las carpetas de imágenes correspondientes a cada conjunto\n",
+    "TRAIN_IMG_DIR = BASE_DIR / \"data\" / \"images\" / \"train\"\n",
+    "VAL_IMG_DIR = BASE_DIR / \"data\" / \"images\" / \"val\"\n",
+    "TEST_IMG_DIR = BASE_DIR / \"data\" / \"images\" / \"test\"\n",
     "\n",
-    "# Rutas de las carpetas de imágenes correspondientes\n",
-    "TRAIN_IMG_DIR = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"train_final\" / \"images\"\n",
-    "VAL_IMG_DIR = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"val_final\" / \"images\"\n",
-    "TEST_IMG_DIR = BASE_DIR / \"data\" / \"outputs\" / \"mirror_clean\" / \"test_final\" / \"images\"\n",
+    "# ============================================================\n",
+    "# RUTAS ALTERNATIVAS (Fallback para compatibilidad)\n",
+    "# ============================================================\n",
+    "\n",
+    "# Rutas alternativas si no existe la estructura estándar\n",
+    "TRAIN_ANN_FILE_ALT = BASE_DIR / \"data\" / \"groundtruth\" / \"json\" / \"big_size\" / \"train_big_size_A_B_E_K_WH_WB.json\"\n",
+    "VAL_ANN_FILE_ALT = BASE_DIR / \"data\" / \"groundtruth\" / \"json\" / \"big_size\" / \"val_big_size_A_B_E_K_WH_WB.json\"\n",
+    "TEST_ANN_FILE_ALT = BASE_DIR / \"data\" / \"groundtruth\" / \"json\" / \"big_size\" / \"test_big_size_A_B_E_K_WH_WB.json\"\n",
     "\n",
     "# Rutas alternativas para imágenes\n",
-    "TRAIN_IMG_DIR_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"train\" / \"images\"\n",
-    "VAL_IMG_DIR_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"val\" / \"images\"\n",
-    "TEST_IMG_DIR_ALT = BASE_DIR / \"data\" / \"outputs\" / \"verified\" / \"test\" / \"images\"\n",
+    "TRAIN_IMG_DIR_ALT = BASE_DIR / \"data\" / \"train\"\n",
+    "VAL_IMG_DIR_ALT = BASE_DIR / \"data\" / \"val\"\n",
+    "TEST_IMG_DIR_ALT = BASE_DIR / \"data\" / \"test\"\n",
     "\n",
     "# ============================================================\n",
-    "# FUNCIÓN PARA CONFIGURAR DATOS (Adaptada para pipelines)\n",
+    "# FUNCIÓN PARA CONFIGURAR DATOS (Unificada con HerdNet)\n",
     "# ============================================================\n",
     "\n",
     "def setup_data():\n",
-    "    \"\"\"Configurar datos desde Google Drive con detección automática de pipelines\"\"\"\n",
+    "    \"\"\"Configurar datos desde Google Drive con detección automática de estructura\"\"\"\n",
     "    \n",
     "    # Montar Google Drive\n",
     "    drive.mount('/content/drive')\n",
     "    print(\"✅ Google Drive montado\")\n",
     "    \n",
-    "    # Verificar si existe la estructura de pipelines\n",
+    "    # Verificar si existe la estructura estándar (igual que HerdNet)\n",
     "    if TRAIN_ANN_FILE.exists() and TRAIN_IMG_DIR.exists():\n",
-    "        print(\"✅ Datos de pipelines encontrados (estructura final)\")\n",
+    "        print(\"✅ Datos encontrados (estructura estándar COCO)\")\n",
     "        cfg.data_root = str(BASE_DIR)\n",
-    "        return True, \"final\"\n",
+    "        return True, \"standard\"\n",
     "    elif TRAIN_ANN_FILE_ALT.exists() and TRAIN_IMG_DIR_ALT.exists():\n",
-    "        print(\"✅ Datos de pipelines encontrados (estructura verificada)\")\n",
+    "        print(\"✅ Datos encontrados (estructura alternativa groundtruth)\")\n",
     "        cfg.data_root = str(BASE_DIR)\n",
-    "        return True, \"verified\"\n",
+    "        return True, \"groundtruth\"\n",
     "    else:\n",
     "        # Buscar en ubicaciones alternativas\n",
     "        drive_path = \"/content/drive/MyDrive\"\n",
@@ -257,24 +261,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Función para encontrar y validar datasets (Adaptada para pipelines)\n",
+    "# Función para encontrar y validar datasets (Unificada con HerdNet)\n",
     "def find_datasets():\n",
     "    \"\"\"Encontrar datasets disponibles según el tipo de datos\"\"\"\n",
     "    \n",
     "    datasets_found = []\n",
     "    \n",
-    "    if data_type == \"final\":\n",
-    "        # Estructura final de pipelines (augmentation + quality)\n",
+    "    if data_type == \"standard\":\n",
+    "        # Estructura estándar COCO (igual que HerdNet)\n",
     "        datasets_found = [TRAIN_ANN_FILE, VAL_ANN_FILE, TEST_ANN_FILE]\n",
-    "        print(\"📊 Usando datasets finales de pipelines:\")\n",
+    "        print(\"📊 Usando datasets estándar COCO:\")\n",
     "        print(f\"  Train: {TRAIN_ANN_FILE}\")\n",
     "        print(f\"  Val: {VAL_ANN_FILE}\")\n",
     "        print(f\"  Test: {TEST_ANN_FILE}\")\n",
     "        \n",
-    "    elif data_type == \"verified\":\n",
-    "        # Estructura verificada de quality pipeline\n",
+    "    elif data_type == \"groundtruth\":\n",
+    "        # Estructura alternativa groundtruth\n",
     "        datasets_found = [TRAIN_ANN_FILE_ALT, VAL_ANN_FILE_ALT, TEST_ANN_FILE_ALT]\n",
-    "        print(\"📊 Usando datasets verificados de quality pipeline:\")\n",
+    "        print(\"📊 Usando datasets groundtruth:\")\n",
     "        print(f\"  Train: {TRAIN_ANN_FILE_ALT}\")\n",
     "        print(f\"  Val: {VAL_ANN_FILE_ALT}\")\n",
     "        print(f\"  Test: {TEST_ANN_FILE_ALT}\")\n",
@@ -287,9 +291,7 @@
     "            \"**/val_*.json\", \n",
     "            \"**/test_*.json\",\n",
     "            \"**/*_big_size_*.json\",\n",
-    "            \"**/*_subframes_*.json\",\n",
-    "            \"**/*_final.json\",\n",
-    "            \"**/*_validated.json\"\n",
+    "            \"**/*_subframes_*.json\"\n",
     "        ]\n",
     "        \n",
     "        for pattern in json_patterns:\n",
@@ -374,11 +376,11 @@
     "        pretrained = \"https://download.openmmlab.com/mmdetection/v2.0/cascade_rcnn/cascade_rcnn_x101_32x4d_fpn_1x_coco/cascade_rcnn_x101_32x4d_fpn_1x_coco_20200315-f6f0ac5e.pth\"\n",
     "    \n",
     "    # Determinar directorios de imágenes según el tipo de datos\n",
-    "    if data_type == \"final\":\n",
+    "    if data_type == \"standard\":\n",
     "        train_img_dir = TRAIN_IMG_DIR\n",
     "        val_img_dir = VAL_IMG_DIR\n",
     "        test_img_dir = TEST_IMG_DIR\n",
-    "    elif data_type == \"verified\":\n",
+    "    elif data_type == \"groundtruth\":\n",
     "        train_img_dir = TRAIN_IMG_DIR_ALT\n",
     "        val_img_dir = VAL_IMG_DIR_ALT\n",
     "        test_img_dir = TEST_IMG_DIR_ALT\n",
@@ -532,30 +534,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preparar datos para entrenamiento (Adaptada para pipelines)\n",
+    "# Preparar datos para entrenamiento (Unificada con HerdNet)\n",
     "def prepare_training_data():\n",
     "    \"\"\"Preparar y validar datos para entrenamiento según el tipo de datos\"\"\"\n",
     "    \n",
-    "    if data_type == \"final\":\n",
-    "        # Usar rutas finales de pipelines\n",
+    "    if data_type == \"standard\":\n",
+    "        # Usar rutas estándar COCO (igual que HerdNet)\n",
     "        train_json = TRAIN_ANN_FILE\n",
     "        val_json = VAL_ANN_FILE\n",
     "        test_json = TEST_ANN_FILE\n",
     "        \n",
     "        # Verificar que existan\n",
     "        if not all([train_json.exists(), val_json.exists(), test_json.exists()]):\n",
-    "            print(\"❌ Faltan archivos de datos finales de pipelines\")\n",
+    "            print(\"❌ Faltan archivos de datos estándar COCO\")\n",
     "            return None, None, None\n",
     "            \n",
-    "    elif data_type == \"verified\":\n",
-    "        # Usar rutas verificadas de quality pipeline\n",
+    "    elif data_type == \"groundtruth\":\n",
+    "        # Usar rutas groundtruth\n",
     "        train_json = TRAIN_ANN_FILE_ALT\n",
     "        val_json = VAL_ANN_FILE_ALT\n",
     "        test_json = TEST_ANN_FILE_ALT\n",
     "        \n",
     "        # Verificar que existan\n",
     "        if not all([train_json.exists(), val_json.exists(), test_json.exists()]):\n",
-    "            print(\"❌ Faltan archivos de datos verificados de quality pipeline\")\n",
+    "            print(\"❌ Faltan archivos de datos groundtruth\")\n",
     "            return None, None, None\n",
     "            \n",
     "    else:\n",
