adición de early stopping en notebooks cascade y deformable

--- a/src/v1/train_deformable_detr_colab.ipynb
+++ b/src/v1/train_deformable_detr_colab.ipynb
@@ -176,6 +176,7 @@
     "        self.epochs = 50\n",
     "        self.batch_size = 4\n",
     "        self.val_batch_size = 2\n",
+    "        self.patience = 10  # Early stopping: detener si no mejora en 10 épocas\n",
     "        \n",
     "        # Directorio de trabajo\n",
     "        self.work_dir = \"/content/work_dirs/deformable_detr\"\n",
@@ -195,6 +196,7 @@
     "        print(f\"  Tamaño de imagen: {self.imgsz}\")\n",
     "        print(f\"  Épocas: {self.epochs}\")\n",
     "        print(f\"  Batch size: {self.batch_size}\")\n",
+    "        print(f\"  Early stopping patience: {self.patience}\")\n",
     "        print(f\"  Dispositivo: {self.device}\")\n",
     "        print(f\"  Directorio de trabajo: {self.work_dir}\")\n",
     "\n",
@@ -507,6 +509,13 @@
     "                \"max_keep_ckpts\": 3, \n",
     "                \"save_best\": \"coco/bbox_mAP\"\n",
     "            },\n",
+    "            \"early_stopping\": {\n",
+    "                \"type\": \"EarlyStoppingHook\",\n",
+    "                \"patience\": detr_config.patience,\n",
+    "                \"monitor\": \"coco/bbox_mAP\",\n",
+    "                \"min_delta\": 0.001,\n",
+    "                \"mode\": \"max\"\n",
+    "            },\n",
     "            \"logger\": {\"type\": \"LoggerHook\", \"interval\": 50},\n",
     "            \"param_scheduler\": {\"type\": \"ParamSchedulerHook\"},\n",
     "            \"timer\": {\"type\": \"IterTimerHook\"},\n",
@@ -521,6 +530,32 @@
     "    return Config(config)\n",
     "\n",
     "print(\"✅ Función de configuración de Deformable DETR creada\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "365d84af",
+   "metadata": {},
+   "source": [
+    "## 🛑 Early Stopping Implementado\n",
+    "\n",
+    "### ✅ **Configuración Agregada**\n",
+    "- **Patience**: 10 épocas (configurable en `DeformableDETRConfig`)\n",
+    "- **Métrica monitoreada**: `coco/bbox_mAP` (mean Average Precision)\n",
+    "- **Modo**: `max` (busca maximizar la métrica)\n",
+    "- **Delta mínimo**: 0.001 (mejora mínima requerida)\n",
+    "\n",
+    "### 🎯 **¿Cómo funciona?**\n",
+    "- El entrenamiento se detendrá automáticamente si la métrica `coco/bbox_mAP` no mejora durante **10 épocas consecutivas**\n",
+    "- Esto evita el sobreajuste y ahorra tiempo de entrenamiento\n",
+    "- El modelo se guardará automáticamente cuando se active el early stopping\n",
+    "\n",
+    "### ⚙️ **Personalización**\n",
+    "Para cambiar el comportamiento, modifica en la clase `DeformableDETRConfig`:\n",
+    "```python\n",
+    "self.patience = 15  # Más paciencia (15 épocas)\n",
+    "self.patience = 5   # Menos paciencia (5 épocas)\n",
+    "```\n"
    ]
   },
   {
@@ -816,6 +851,7 @@
     "- **Modelo**: Deformable DETR con backbone {detr_config.backbone}\n",
     "- **Tamaño de imagen**: {detr_config.imgsz}x{detr_config.imgsz}\n",
     "- **Épocas**: {detr_config.epochs}\n",
+    "- **Early Stopping**: {detr_config.patience} épocas de paciencia\n",
     "- **Clases detectadas**: {len(detr_config.classes)} especies de animales\n",
     "\n",
     "### 📊 Próximos Pasos\n",
@@ -830,6 +866,7 @@
     "- Ajustar épocas: `epochs = 100`\n",
     "- Modificar tamaño de imagen: `imgsz = 1024`\n",
     "- Cambiar batch size: `batch_size = 8`\n",
+    "- Ajustar early stopping: `patience = 15` (más paciencia) o `patience = 5` (menos paciencia)\n",
     "\n",
     "### 📚 Recursos Adicionales\n",
     "- [Documentación MMDetection](https://mmdetection.readthedocs.io/)\n",
