--- a/src/v1/train_cascade_rcnn_colab.ipynb
+++ b/src/v1/train_cascade_rcnn_colab.ipynb
@@ -170,6 +170,7 @@
     "        self.epochs = 48\n",
     "        self.batch_size = 4\n",
     "        self.val_batch_size = 2\n",
+    "        self.patience = 10  # Early stopping: detener si no mejora en 10 épocas\n",
     "        \n",
     "        # Directorio de trabajo\n",
     "        self.work_dir = \"/content/work_dirs/cascade_rcnn\"\n",
@@ -189,6 +190,7 @@
     "        print(f\"  Tamaño de imagen: {self.imgsz}\")\n",
     "        print(f\"  Épocas: {self.epochs}\")\n",
     "        print(f\"  Batch size: {self.batch_size}\")\n",
+    "        print(f\"  Early stopping patience: {self.patience}\")\n",
     "        print(f\"  Dispositivo: {self.device}\")\n",
     "        print(f\"  Directorio de trabajo: {self.work_dir}\")\n",
     "\n",
@@ -523,6 +525,13 @@
     "                \"max_keep_ckpts\": 3, \n",
     "                \"save_best\": \"coco/bbox_mAP\"\n",
     "            },\n",
+    "            \"early_stopping\": {\n",
+    "                \"type\": \"EarlyStoppingHook\",\n",
+    "                \"patience\": cascade_config.patience,\n",
+    "                \"monitor\": \"coco/bbox_mAP\",\n",
+    "                \"min_delta\": 0.001,\n",
+    "                \"mode\": \"max\"\n",
+    "            },\n",
     "            \"logger\": {\"type\": \"LoggerHook\", \"interval\": 50},\n",
     "            \"param_scheduler\": {\"type\": \"ParamSchedulerHook\"},\n",
     "            \"timer\": {\"type\": \"IterTimerHook\"},\n",
@@ -537,6 +546,32 @@
     "    return Config(config)\n",
     "\n",
     "print(\"✅ Función de configuración del modelo creada\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dbb932b",
+   "metadata": {},
+   "source": [
+    "## 🛑 Early Stopping Implementado\n",
+    "\n",
+    "### ✅ **Configuración Agregada**\n",
+    "- **Patience**: 10 épocas (configurable en `CascadeConfig`)\n",
+    "- **Métrica monitoreada**: `coco/bbox_mAP` (mean Average Precision)\n",
+    "- **Modo**: `max` (busca maximizar la métrica)\n",
+    "- **Delta mínimo**: 0.001 (mejora mínima requerida)\n",
+    "\n",
+    "### 🎯 **¿Cómo funciona?**\n",
+    "- El entrenamiento se detendrá automáticamente si la métrica `coco/bbox_mAP` no mejora durante **10 épocas consecutivas**\n",
+    "- Esto evita el sobreajuste y ahorra tiempo de entrenamiento\n",
+    "- El modelo se guardará automáticamente cuando se active el early stopping\n",
+    "\n",
+    "### ⚙️ **Personalización**\n",
+    "Para cambiar el comportamiento, modifica en la clase `CascadeConfig`:\n",
+    "```python\n",
+    "self.patience = 15  # Más paciencia (15 épocas)\n",
+    "self.patience = 5   # Menos paciencia (5 épocas)\n",
+    "```\n"
    ]
   },
   {
@@ -826,6 +861,7 @@
     "- **Modelo**: Cascade R-CNN con backbone {cascade_config.backbone}\n",
     "- **Tamaño de imagen**: {cascade_config.imgsz}x{cascade_config.imgsz}\n",
     "- **Épocas**: {cascade_config.epochs}\n",
+    "- **Early Stopping**: {cascade_config.patience} épocas de paciencia\n",
     "- **Clases detectadas**: {len(cascade_config.classes)} especies de animales\n",
     "\n",
     "### 📊 Próximos Pasos\n",
@@ -840,17 +876,13 @@
     "- Ajustar épocas: `epochs = 100`\n",
     "- Modificar tamaño de imagen: `imgsz = 1024`\n",
     "- Cambiar batch size: `batch_size = 8`\n",
+    "- Ajustar early stopping: `patience = 15` (más paciencia) o `patience = 5` (menos paciencia)\n",
     "\n",
     "### 📚 Recursos Adicionales\n",
     "- [Documentación MMDetection](https://mmdetection.readthedocs.io/)\n",
     "- [Cascade R-CNN Paper](https://arxiv.org/abs/1712.00726)\n",
     "- [Swin Transformer Paper](https://arxiv.org/abs/2103.14030)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
