--- a/notebooks/full_herdnet_maia_plus.ipynb
+++ b/notebooks/full_herdnet_maia_plus.ipynb
@@ -13368,7 +13368,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -13382,7 +13382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
