--- a/notebooks/full_herdnet_maia_plus.ipynb
+++ b/notebooks/full_herdnet_maia_plus.ipynb
@@ -13368,9 +13368,9 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9 (pandas 1.2.3)",
    "language": "python",
-   "name": "python3"
+   "name": "py39env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -13382,7 +13382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.9.25"
   }
  },
  "nbformat": 4,
